--- a/Project_1B_Project_Template.ipynb
+++ b/Project_1B_Project_Template.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part I. ETL Pipeline for Pre-Processing the Files"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## PLEASE RUN THE FOLLOWING CODE FOR PRE-PROCESSING THE FILES"
+    "# Data Modeling With Apache Cassandra"
    ]
   },
   {
@@ -36,6 +29,13 @@
     "import numpy as np\n",
     "import json\n",
     "import csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part I. ETL Pipeline for Pre-Processing the Files"
    ]
   },
   {
@@ -84,7 +84,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8056\n"
+     ]
+    }
+   ],
    "source": [
     "# initiating an empty list of rows that will be generated from each file\n",
     "full_data_rows_list = [] \n",
@@ -104,7 +112,7 @@
     "            full_data_rows_list.append(line) \n",
     "            \n",
     "# uncomment the code below if you would like to get total number of rows \n",
-    "#print(len(full_data_rows_list))\n",
+    "print(len(full_data_rows_list))\n",
     "# uncomment the code below if you would like to check to see what the list of event data rows will look like\n",
     "#print(full_data_rows_list)\n",
     "\n",
@@ -145,9 +153,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part II. Complete the Apache Cassandra coding portion of your project. \n",
+    "## Part II. Apache Cassandra coding portion.\n",
     "\n",
-    "## Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
+    "### The event_datafile_new.csv contains the following columns: \n",
     "- artist \n",
     "- firstName of user\n",
     "- gender of user\n",
@@ -163,13 +171,6 @@
     "The image below is a screenshot of what the denormalized data should appear like in the <font color=red>**event_datafile_new.csv**</font> after the code above is run:<br>\n",
     "\n",
     "<img src=\"images/image_event_datafile_new.jpg\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Begin writing your Apache Cassandra code in the cells below"
    ]
   },
   {
@@ -217,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Create a Keyspace \n",
+    "# Create a Keyspace \n",
     "try:\n",
     "    session.execute(\"\"\"CREATE KEYSPACE IF NOT EXISTS udacity\n",
     "                    WITH REPLICATION =\n",
@@ -240,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Set KEYSPACE to the keyspace specified above\n",
+    "# Set KEYSPACE to the keyspace specified above\n",
     "try:\n",
     "    session.set_keyspace('udacity')\n",
     "except Exception as e:\n",
@@ -251,14 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create queries to ask the following three questions of the data\n",
+    "## The required queries by the analytics team are the following:\n",
     "\n",
     "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
     "\n",
@@ -273,38 +267,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
-    "## sessionId = 338, and itemInSession = 4\n",
-    "\n",
-    "\n",
-    "                    "
+    "# Path of the event data file\n",
+    "file = 'event_datafile_new.csv'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query1\n",
+    "```\n",
+    "SELECT\n",
+    "    artist, song, length\n",
+    "FROM\n",
+    "    songplay_session_item\n",
+    "WHERE\n",
+    "    session_id = 338 AND item_in_session = 4\n",
+    "```\n",
+    "<br><p>In the responding data model:<br>\n",
+    "the data is **Partitioned** by *session_id*<br>\n",
+    "and **Clustered** by *item_in_session*</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CREATE statement\n",
+    "\n",
+    "query = \"CREATE TABLE IF NOT EXISTS songplay_session_item \"\n",
+    "query += \"\"\"(session_id int, item_in_session int, artist text, song text, length float,\n",
+    "            PRIMARY KEY (session_id, item_in_session))\"\"\"\n",
+    "\n",
+    "# Execute CREATE\n",
+    "try:\n",
+    "    session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
-    "file = 'event_datafile_new.csv'\n",
-    "\n",
+    "# Write and Execute the INSERT statement\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = \"<ENTER INSERT STATEMENT HERE>\"\n",
-    "        query = query + \"<ASSIGN VALUES HERE>\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[#], line[#]))"
+    "\n",
+    "        query = \"INSERT INTO songplay_session_item (session_id, item_in_session, artist, song, length) \"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s, %s)\"\n",
+    "        \n",
+    "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
    ]
   },
   {
@@ -316,60 +341,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Faithless , Music Matters (Mark Knight Dub) , 495.30731201171875\n"
+     ]
+    }
+   ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table"
+    "# Execute the query\n",
+    "\n",
+    "query = \"SELECT artist, song, length FROM songplay_session_item WHERE session_id = 338 AND item_in_session = 4\"\n",
+    "\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row.artist, \",\", row.song, \",\", row.length)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
+    "### Query2\n",
+    "```\n",
+    "SELECT\n",
+    "    artist, song, first_name, last_name\n",
+    "FROM\n",
+    "    songplay_user_session\n",
+    "WHERE\n",
+    "    user_id = 10 AND session_id = 182\n",
+    "```\n",
+    "<br><p>In the responding data model:<br>\n",
+    "The data is **Partitioned** by **user_id**<br>\n",
+    "and **Clustered** by **session_id** and **item_in_session**</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
-    "## for userid = 10, sessionid = 182\n",
+    "# CREATE statement\n",
     "\n",
+    "query = \"CREATE TABLE IF NOT EXISTS songplay_user_session \"\n",
+    "query += \"\"\"(user_id int, session_id int, item_in_session int, artist text, song text, first_name text, last_name text,\n",
+    "            PRIMARY KEY(user_id, session_id, item_in_session))\"\"\"\n",
     "\n",
-    "                    "
+    "# Execute CREATE\n",
+    "\n",
+    "try:\n",
+    "    session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)                   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "# Write and Execute the INSERT statement\n",
     "\n",
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header\n",
+    "    for line in csvreader:\n",
     "\n",
-    "                    "
+    "        query = \"INSERT INTO songplay_user_session (user_id, session_id, item_in_session, artist, song, first_name, last_name) \"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s, %s, %s, %s)\"\n",
+    "        \n",
+    "        session.execute(query, (int(line[10]), int(line[8]), int(line[3]), line[0], line[9], line[1], line[4]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Do a SELECT to verify that the data have been inserted into each table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Down To The Bone , Keep On Keepin' On , Sylvie , Cruz\n",
+      "Three Drives , Greece 2000 , Sylvie , Cruz\n",
+      "Sebastien Tellier , Kilometer , Sylvie , Cruz\n",
+      "Lonnie Gordon , Catch You Baby (Steve Pitron & Max Sanna Radio Edit) , Sylvie , Cruz\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Execute the query\n",
+    "\n",
+    "query = \"SELECT artist, song, first_name, last_name FROM songplay_user_session WHERE user_id = 10 AND session_id = 182\"\n",
+    "\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row.artist, \",\", row.song, \",\", row.first_name, \",\", row.last_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query3\n",
+    "```python\n",
+    "SELECT \n",
+    "    first_name, last_name\n",
+    "FROM\n",
+    "    songplay_song_user\n",
+    "WHERE\n",
+    "    song = 'All Hands Against His Own'\n",
+    "```\n",
+    "<br><p>In the responding data model:<br>\n",
+    "The data is **Partitioned** by **song**<br>\n",
+    "and **Clustered** by **user_id**</p>"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# CREATE statement\n",
+    "\n",
+    "query = \"CREATE TABLE IF NOT EXISTS songplay_song_user \"\n",
+    "query += \"\"\"(song text, user_id int, first_name text, last_name text,\n",
+    "            PRIMARY KEY(song, user_id))\"\"\"\n",
+    "\n",
+    "# Execute CREATE\n",
+    "\n",
+    "try:\n",
+    "    session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)           "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write and Execute the INSERT statement\n",
+    "\n",
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header\n",
+    "    for line in csvreader:\n",
+    "\n",
+    "        query = \"INSERT INTO songplay_song_user (song, user_id, first_name, last_name) \"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s)\"\n",
+    "        \n",
+    "        session.execute(query, (line[9], int(line[10]),line[1], line[4]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Do a SELECT to verify that the data have been inserted into each table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jacqueline , Lynch\n",
+      "Tegan , Levine\n",
+      "Sara , Johnson\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Execute the query\n",
+    "\n",
+    "query = \"SELECT first_name, last_name FROM songplay_song_user WHERE song = 'All Hands Against His Own'\"\n",
+    "\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row.first_name, \",\", row.last_name)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -380,19 +564,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Drop the table before closing out the sessions"
+    "# Drop the tables before closing out the session\n",
+    "\n",
+    "query = \"DROP TABLE IF EXISTS songplay_session_item\"\n",
+    "try:\n",
+    "    session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "query = \"DROP TABLE IF EXISTS songplay_user_session\"\n",
+    "try:\n",
+    "    session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "query = \"DROP TABLE IF EXISTS songplay_song_user\"    \n",
+    "try:\n",
+    "    session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -403,27 +598,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "session.shutdown()\n",
     "cluster.shutdown()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
